algos through binary search

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ app/**/*.map
 node_modules
 jspm_packages
 bower_components
+/GapDefier/nbproject/private/
+/GapDefier/build/
+/GapDefier/target/
+/GapDefier/nbproject/
+/GapApp/nbproject/
+/GapApp/target/
